--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.9.9",
+    "@clerk/themes": "^2.2.5",
     "flowbite-react": "^0.10.2",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
