--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@clerk/nextjs": "^6.9.9",
     "@clerk/themes": "^2.2.5",
     "flowbite-react": "^0.10.2",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.4",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
